the terms of the GNU Free Documentation License, Version 1.3 or any later
version published by the Free Software Foundation; with no Invariant Sections,
no Front-Cover Texts, and no Back-Cover Texts. A copy of the license is included
in the sources of this package and additionally can be obtained from Internet
<https://www.gnu.org/licenses>.

* [2019-05-01] RFC4880: added support of v5 keys in parsing functions
* [2019-04-30] RFC4880: changed PacketSigPrepareDetachedSignature() to follow
               requirements of RFC4880bis-06 regarding the issuer subpacket
* [2019-04-30] RFC4880: added PacketSigPrepareDetachedSignatureV5()
* [2019-04-29] RFC4880: fixed wrong parsing of date within Literal Data Packet
* [2019-04-29] RFC4880: added BinaryDocumentHashV5(), TextDocumentHashV5()
* [2019-04-27] RFC4880: fixed memory leak in PacketDecode() found by fuzzying
* [2019-04-21] RFC4880: added StandaloneHashV5(), CertificationHashV5()
* [2019-04-21] RFC4880: added PacketScalar[Four,Eight]Encode(), KeyHashV5()
* [2019-04-21] RFC4880: added PacketSubEncodeV5(), PacketPubEncodeV5()
* [2019-04-21] RFC4880: changed TMCG_OpenPGP_PrivateSubkey, TMCG_OpenPGP_Prvkey
* [2019-04-21] RFC4880: changed TMCG_OpenPGP_Subkey, TMCG_OpenPGP_Pubkey
* [2019-04-21] RFC4880: added KeyidComputerV5(), FingerprintComputePrettyV5()
* [2019-04-19] RFC4880: added FingerprintComputeV5() and version 5 key format
* [2019-01-27] RFC4880: added missed GCRY error source by using gcry_error()
* [2019-01-22] release 1.3.17 of LibTMCG
* [2019-01-19] VTMF,ASTC,DKG,VRHE,EOTP,COM,VSS: make CheckGroup() more robust
* [2019-01-19] VSSHE: security bugfix for Verify_[non]interactive_[_publiccoin]
* [2019-01-16] mpz_spowm: added check for correct base in fast exponentiation
* [2019-01-16] mpz_sqrtm: remove unused parameter in tmcg_mpz_qrmn_p()
* [2019-01-16] configure.ac: added compiler option "-Wextra"
* [2019-01-05] mpz_sprime: added tmcg_mpz_smprime() with increased B = 80000